--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.2.23",
+        "@types/react-dom": "^18.2.7",
+        "@vitejs/plugin-react": "^4.1.0",
         "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.29",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
