--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "@tiptap/react": "^2.1.11",
         "@tiptap/starter-kit": "^2.1.11",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0"
+        "react-dom": "^18.2.0"
     }
 }
