--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@tiptap/starter-kit": "^2.1.11",
         "classnames": "^2.3.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "vite-plugin-svgr": "^4.1.0"
     }
 }
